--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 main {
   height: 50vh;
   padding: 20px;
+  padding-bottom: 50px;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,8 +19,14 @@ h1 {
   color: rgb(100, 100, 100);
   margin: 20px;
 }
-p,
+
 form {
+  padding: 7px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+p {
   padding: 7px;
 }
 
@@ -27,4 +35,11 @@ form {
   border: none;
   border-radius: 2em;
   margin-left: 10px;
+  height: 30px;
+  width: 100px;
+}
+
+select {
+  height: 30px;
+  width: 100px;
 }
